openturns/1.16/_sources/auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:


Time series manipulation
========================

The objective here is to create and manipulate a time series. A time series is a particular field where the mesh :math:`\mathcal{M}` 1-d and regular, eg a time grid :math:`(t_0, \dots, t_{N-1})`.

It is possible to draw a time series, using interpolation between the values: see the use case on the Field.

A time series can be obtained as a realization of a multivariate stochastic process  :math:`X: \Omega \times [0,T] \rightarrow \mathbb{R}^d`   of dimension :math:`d` where :math:`[0,T]` is discretized according to the regular grid :math:`(t_0, \dots, t_{N-1})` . The  values :math:`(\underline{x}_0, \dots, \underline{x}_{N-1})` of the  time series are defined by:

.. math::  
   \forall i \in [0, N-1],\quad \underline{x}_i= X(\omega)(t_i)


A time series is stored in the **TimeSeries** object that stores the regular time grid and the associated values.


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    import math as m
    ot.Log.Show(ot.Log.NONE)








Create the RegularGrid


.. code-block:: default

    tMin = 0.
    timeStep = 0.1
    N = 100
    myTimeGrid = ot.RegularGrid(tMin, timeStep, N)








Case 1: Create a time series from a time grid and values
Care! The number of steps of the time grid must correspond to the size of the values


.. code-block:: default

    myValues = ot.Normal(3).getSample(myTimeGrid.getVertices().getSize())
    myTimeSeries = ot.TimeSeries(myTimeGrid, myValues)
    myTimeSeries






.. raw:: html

    <p>     [ t           X0          X1          X2          ]<br>
     0 : [  0          -0.182484   -0.440356    1.13247    ]<br>
     1 : [  0.1         0.674547    1.34247     1.39874    ]<br>
     2 : [  0.2         0.736782   -0.252381    1.3757     ]<br>
     3 : [  0.3        -0.858775    0.00109033  0.579508   ]<br>
     4 : [  0.4         0.383663    0.494226    0.707441   ]<br>
     5 : [  0.5        -2.79738     3.04752    -0.0763745  ]<br>
     6 : [  0.6        -1.14715     2.57154     1.52295    ]<br>
     7 : [  0.7        -0.412344    0.197543   -1.32056    ]<br>
     8 : [  0.8         0.0784782   1.15086     0.357457   ]<br>
     9 : [  0.9         0.80829    -0.846094    0.197997   ]<br>
    10 : [  1          -0.309455   -0.798818   -1.49124    ]<br>
    11 : [  1.1         0.908445   -0.572821    1.15664    ]<br>
    12 : [  1.2         0.50848    -1.56675    -0.0885204  ]<br>
    13 : [  1.3        -0.439673   -0.216443    0.992476   ]<br>
    14 : [  1.4         1.24972    -0.0733184   1.40725    ]<br>
    15 : [  1.5        -0.461717    1.11996    -1.24464    ]<br>
    16 : [  1.6         0.773224   -0.531869   -0.52065    ]<br>
    17 : [  1.7         0.383878    0.590867    0.971656   ]<br>
    18 : [  1.8         0.42521    -0.679881   -0.224992   ]<br>
    19 : [  1.9         0.911013   -0.0652468  -1.73899    ]<br>
    20 : [  2           0.0937754   0.11441     0.44022    ]<br>
    21 : [  2.1        -0.01304    -1.13674     0.638542   ]<br>
    22 : [  2.2         0.637729   -0.495112   -0.512163   ]<br>
    23 : [  2.3        -0.975287   -0.810021    0.330267   ]<br>
    24 : [  2.4        -1.91617     0.0245578   0.862084   ]<br>
    25 : [  2.5         0.863564    0.257896    0.263776   ]<br>
    26 : [  2.6        -0.168931   -0.522402    0.468233   ]<br>
    27 : [  2.7        -0.140062    1.35497    -0.597185   ]<br>
    28 : [  2.8        -1.11299    -1.42881     2.20836    ]<br>
    29 : [  2.9        -1.23704    -0.445937    0.762529   ]<br>
    30 : [  3          -0.756441    0.394736   -0.89202    ]<br>
    31 : [  3.1        -0.635901   -0.737606   -0.191263   ]<br>
    32 : [  3.2        -0.427053   -0.299966   -1.87562    ]<br>
    33 : [  3.3        -1.15349     0.631904   -0.255809   ]<br>
    34 : [  3.4         0.527049   -0.525721    1.36335    ]<br>
    35 : [  3.5        -0.549281    0.734446    0.517316   ]<br>
    36 : [  3.6         0.0623652  -1.39255    -2.64948    ]<br>
    37 : [  3.7        -0.330858   -1.40182     0.339849   ]<br>
    38 : [  3.8         0.892018    0.769703    0.328253   ]<br>
    39 : [  3.9        -0.772016   -0.333568    2.05861    ]<br>
    40 : [  4           0.813765    0.70262     0.130501   ]<br>
    41 : [  4.1        -0.859126    1.60644    -0.351036   ]<br>
    42 : [  4.2         0.0271934  -1.44884     1.15448    ]<br>
    43 : [  4.3        -1.12584     1.55685    -0.19887    ]<br>
    44 : [  4.4        -0.529622    1.17651     0.293214   ]<br>
    45 : [  4.5        -0.407357    0.346712   -1.03687    ]<br>
    46 : [  4.6         0.015817   -0.676278    0.424196   ]<br>
    47 : [  4.7        -1.28905     1.08282    -0.953553   ]<br>
    48 : [  4.8        -1.63306     1.36541     0.164474   ]<br>
    49 : [  4.9        -1.16748    -0.534041   -0.564179   ]<br>
    50 : [  5           0.300872    1.68764    -0.119298   ]<br>
    51 : [  5.1        -0.543738   -2.44822     0.252724   ]<br>
    52 : [  5.2         0.0290843  -1.11237    -0.737089   ]<br>
    53 : [  5.3         1.6428     -2.0151      1.18185    ]<br>
    54 : [  5.4        -0.0548356  -0.134918    0.569179   ]<br>
    55 : [  5.5         0.7776      0.266954   -1.28617    ]<br>
    56 : [  5.6         0.192363   -0.632593   -0.197716   ]<br>
    57 : [  5.7        -1.00735     0.503821   -0.888276   ]<br>
    58 : [  5.8         1.88178    -0.789546    0.426544   ]<br>
    59 : [  5.9        -0.30418     0.433553    1.7036     ]<br>
    60 : [  6          -0.478431   -0.898794   -0.104475   ]<br>
    61 : [  6.1        -0.744107    1.10736    -0.421768   ]<br>
    62 : [  6.2         1.84934     0.907834   -0.400522   ]<br>
    63 : [  6.3         0.287392    0.543246   -0.428477   ]<br>
    64 : [  6.4        -1.34214     0.109366   -0.629774   ]<br>
    65 : [  6.5        -1.29804    -1.05483    -0.790768   ]<br>
    66 : [  6.6         2.26413     0.00432486 -0.208023   ]<br>
    67 : [  6.7        -0.965814   -1.04571     0.800641   ]<br>
    68 : [  6.8        -2.11142    -0.475061    0.664259   ]<br>
    69 : [  6.9         0.752243    1.42432     1.53569    ]<br>
    70 : [  7          -0.534013   -0.085785    0.128866   ]<br>
    71 : [  7.1         0.24489    -0.797195    0.988479   ]<br>
    72 : [  7.2        -0.0338217   0.695057    2.77684    ]<br>
    73 : [  7.3         0.557462    0.441871    1.11801    ]<br>
    74 : [  7.4         0.110938   -0.262389    0.341779   ]<br>
    75 : [  7.5        -0.766122   -0.570663    0.718851   ]<br>
    76 : [  7.6        -0.782492    0.0530888   0.469527   ]<br>
    77 : [  7.7        -0.824322    0.0659858   1.3081     ]<br>
    78 : [  7.8         0.0867897   0.226602   -1.13576    ]<br>
    79 : [  7.9        -0.11632     0.506479    0.543716   ]<br>
    80 : [  8           0.527622   -0.879927   -0.853346   ]<br>
    81 : [  8.1        -0.812964   -0.388733    0.646043   ]<br>
    82 : [  8.2        -0.968639    1.69371     0.772567   ]<br>
    83 : [  8.3        -1.66345     1.85585    -1.34847    ]<br>
    84 : [  8.4         1.4947      0.208781    1.15428    ]<br>
    85 : [  8.5        -0.508857    0.471101   -1.04333    ]<br>
    86 : [  8.6         0.225843   -0.159677    0.269437   ]<br>
    87 : [  8.7         1.96162    -1.1784     -0.872668   ]<br>
    88 : [  8.8         0.0748948   0.935867    1.68141    ]<br>
    89 : [  8.9        -0.508926    1.74994     1.02931    ]<br>
    90 : [  9           0.527057   -1.10613    -0.332096   ]<br>
    91 : [  9.1        -0.320962   -1.78858    -0.662092   ]<br>
    92 : [  9.2         0.593153    1.02311    -0.762216   ]<br>
    93 : [  9.3        -1.06471    -1.74861     0.805991   ]<br>
    94 : [  9.4        -0.225593    1.92683    -1.94564    ]<br>
    95 : [  9.5        -0.379446    0.401309    1.17893    ]<br>
    96 : [  9.6        -0.553239   -1.15422    -0.0443501  ]<br>
    97 : [  9.7         0.407933   -1.3633      0.392107   ]<br>
    98 : [  9.8         1.03737     0.624896    0.0248253  ]<br>
    99 : [  9.9         2.54438    -0.59357    -0.849044   ]</p>
    <br />
    <br />

Case 2: Get a time series from a Process


.. code-block:: default

    myProcess = ot.WhiteNoise(ot.Normal(3), myTimeGrid)
    myTimeSeries2 = myProcess.getRealization()
    myTimeSeries2






.. raw:: html

    <TABLE><TR><TD></TD><TH>t</TH><TH>X0</TH><TH>X1</TH><TH>X2</TH></TR>
    <TR><TH>0</TH><TD>0</TD><TD>-0.8828219</TD><TD>0.4980987</TD><TD>-1.355246</TD></TR>
    <TR><TH>1</TH><TD>0.1</TD><TD>-0.5372505</TD><TD>0.06518352</TD><TD>0.5361502</TD></TR>
    <TR><TH>2</TH><TD>0.2</TD><TD>-0.1752852</TD><TD>0.1363254</TD><TD>3.087135</TD></TR>
    <TR><TH>3</TH><TD>0.3</TD><TD>0.2017424</TD><TD>-0.9372854</TD><TD>0.8240501</TD></TR>
    <TR><TH>4</TH><TD>0.4</TD><TD>-0.5542514</TD><TD>-2.939255</TD><TD>-0.2608888</TD></TR>
    <TR><TH>5</TH><TD>0.5</TD><TD>-1.337974</TD><TD>-0.6713168</TD><TD>0.1290662</TD></TR>
    <TR><TH>6</TH><TD>0.6</TD><TD>1.200179</TD><TD>-1.153398</TD><TD>0.1501093</TD></TR>
    <TR><TH>7</TH><TD>0.7</TD><TD>2.021389</TD><TD>0.4048002</TD><TD>-1.588321</TD></TR>
    <TR><TH>8</TH><TD>0.8</TD><TD>-0.2116392</TD><TD>-0.3148359</TD><TD>0.5790985</TD></TR>
    <TR><TH>9</TH><TD>0.9</TD><TD>-0.023225</TD><TD>1.259079</TD><TD>1.173906</TD></TR>
    <TR><TH>10</TH><TD>1</TD><TD>-1.95625</TD><TD>-1.3848</TD><TD>-0.3217505</TD></TR>
    <TR><TH>11</TH><TD>1.1</TD><TD>1.241243</TD><TD>-1.147135</TD><TD>-0.4986612</TD></TR>
    <TR><TH>12</TH><TD>1.2</TD><TD>0.4974517</TD><TD>-0.227134</TD><TD>-0.9424234</TD></TR>
    <TR><TH>13</TH><TD>1.3</TD><TD>0.01796889</TD><TD>-0.2453247</TD><TD>-0.2136053</TD></TR>
    <TR><TH>14</TH><TD>1.4</TD><TD>0.3282077</TD><TD>1.111701</TD><TD>1.47936</TD></TR>
    <TR><TH>15</TH><TD>1.5</TD><TD>-1.324153</TD><TD>0.5101362</TD><TD>1.170227</TD></TR>
    <TR><TH>16</TH><TD>1.6</TD><TD>1.654765</TD><TD>-0.6048047</TD><TD>1.260798</TD></TR>
    <TR><TH>17</TH><TD>1.7</TD><TD>-0.4303438</TD><TD>0.7634444</TD><TD>1.257361</TD></TR>
    <TR><TH>18</TH><TD>1.8</TD><TD>2.206263</TD><TD>0.2056162</TD><TD>-0.9989515</TD></TR>
    <TR><TH>19</TH><TD>1.9</TD><TD>-0.6315028</TD><TD>-0.9982424</TD><TD>-1.252102</TD></TR>
    <TR><TH>20</TH><TD>2</TD><TD>-2.133005</TD><TD>-0.6429958</TD><TD>-0.5764426</TD></TR>
    <TR><TH>21</TH><TD>2.1</TD><TD>-0.5161815</TD><TD>1.439152</TD><TD>-0.5802348</TD></TR>
    <TR><TH>22</TH><TD>2.2</TD><TD>0.6908353</TD><TD>0.2409871</TD><TD>1.614409</TD></TR>
    <TR><TH>23</TH><TD>2.3</TD><TD>-0.8676221</TD><TD>-0.3794585</TD><TD>0.1487301</TD></TR>
    <TR><TH>24</TH><TD>2.4</TD><TD>0.3659664</TD><TD>-0.5051051</TD><TD>0.7310519</TD></TR>
    <TR><TH>25</TH><TD>2.5</TD><TD>1.890257</TD><TD>0.2846552</TD><TD>0.9271769</TD></TR>
    <TR><TH>26</TH><TD>2.6</TD><TD>0.4909163</TD><TD>2.140718</TD><TD>0.1315835</TD></TR>
    <TR><TH>27</TH><TD>2.7</TD><TD>-1.539999</TD><TD>-0.02612867</TD><TD>-1.663261</TD></TR>
    <TR><TH>28</TH><TD>2.8</TD><TD>0.09603311</TD><TD>0.7470867</TD><TD>1.736009</TD></TR>
    <TR><TH>29</TH><TD>2.9</TD><TD>0.1859428</TD><TD>0.7696002</TD><TD>1.110721</TD></TR>
    <TR><TH>30</TH><TD>3</TD><TD>0.2810756</TD><TD>2.080717</TD><TD>-0.8239839</TD></TR>
    <TR><TH>31</TH><TD>3.1</TD><TD>2.051948</TD><TD>-0.7929625</TD><TD>-0.1298837</TD></TR>
    <TR><TH>32</TH><TD>3.2</TD><TD>2.10165</TD><TD>0.3877531</TD><TD>1.186128</TD></TR>
    <TR><TH>33</TH><TD>3.3</TD><TD>-1.032992</TD><TD>0.1772762</TD><TD>0.7248854</TD></TR>
    <TR><TH>34</TH><TD>3.4</TD><TD>-2.422873</TD><TD>0.3085703</TD><TD>-0.8755152</TD></TR>
    <TR><TH>35</TH><TD>3.5</TD><TD>-0.3806235</TD><TD>-0.4749865</TD><TD>1.639512</TD></TR>
    <TR><TH>36</TH><TD>3.6</TD><TD>-2.301016</TD><TD>0.662737</TD><TD>-0.154703</TD></TR>
    <TR><TH>37</TH><TD>3.7</TD><TD>1.869129</TD><TD>0.06195638</TD><TD>0.7639706</TD></TR>
    <TR><TH>38</TH><TD>3.8</TD><TD>-1.05445</TD><TD>-0.4374065</TD><TD>0.3126223</TD></TR>
    <TR><TH>39</TH><TD>3.9</TD><TD>0.6484891</TD><TD>-1.034977</TD><TD>-0.461004</TD></TR>
    <TR><TH>40</TH><TD>4</TD><TD>-0.9253823</TD><TD>1.205154</TD><TD>-0.4920414</TD></TR>
    <TR><TH>41</TH><TD>4.1</TD><TD>0.5250973</TD><TD>-2.057055</TD><TD>-0.5560234</TD></TR>
    <TR><TH>42</TH><TD>4.2</TD><TD>0.8234611</TD><TD>0.5511538</TD><TD>-1.348432</TD></TR>
    <TR><TH>43</TH><TD>4.3</TD><TD>1.129766</TD><TD>-0.4567406</TD><TD>-0.2960206</TD></TR>
    <TR><TH>44</TH><TD>4.4</TD><TD>-0.04858309</TD><TD>0.4198652</TD><TD>1.019731</TD></TR>
    <TR><TH>45</TH><TD>4.5</TD><TD>0.2619137</TD><TD>2.059704</TD><TD>0.1056127</TD></TR>
    <TR><TH>46</TH><TD>4.6</TD><TD>0.1887279</TD><TD>0.917922</TD><TD>0.4719192</TD></TR>
    <TR><TH>47</TH><TD>4.7</TD><TD>1.440201</TD><TD>2.463454</TD><TD>-1.305822</TD></TR>
    <TR><TH>48</TH><TD>4.8</TD><TD>-0.320028</TD><TD>-0.5290385</TD><TD>-0.03588321</TD></TR>
    <TR><TH>49</TH><TD>4.9</TD><TD>-0.3387673</TD><TD>0.269285</TD><TD>-1.67791</TD></TR>
    <TR><TH>50</TH><TD>5</TD><TD>-1.893451</TD><TD>1.045713</TD><TD>0.1414545</TD></TR>
    <TR><TH>51</TH><TD>5.1</TD><TD>1.840738</TD><TD>0.02085951</TD><TD>0.7341872</TD></TR>
    <TR><TH>52</TH><TD>5.2</TD><TD>0.3694536</TD><TD>0.01631195</TD><TD>-0.5654601</TD></TR>
    <TR><TH>53</TH><TD>5.3</TD><TD>0.03670462</TD><TD>0.5372229</TD><TD>-0.4234632</TD></TR>
    <TR><TH>54</TH><TD>5.4</TD><TD>-0.4065987</TD><TD>-0.2864694</TD><TD>1.122679</TD></TR>
    <TR><TH>55</TH><TD>5.5</TD><TD>0.5949969</TD><TD>-0.12097</TD><TD>-1.716656</TD></TR>
    <TR><TH>56</TH><TD>5.6</TD><TD>-0.970214</TD><TD>0.6843236</TD><TD>0.3490545</TD></TR>
    <TR><TH>57</TH><TD>5.7</TD><TD>0.4498215</TD><TD>-0.4501522</TD><TD>-0.02359276</TD></TR>
    <TR><TH>58</TH><TD>5.8</TD><TD>-0.6908011</TD><TD>0.7983409</TD><TD>-2.055452</TD></TR>
    <TR><TH>59</TH><TD>5.9</TD><TD>1.19464</TD><TD>1.021232</TD><TD>-0.008772303</TD></TR>
    <TR><TH>60</TH><TD>6</TD><TD>-0.2725593</TD><TD>-0.429363</TD><TD>1.270387</TD></TR>
    <TR><TH>61</TH><TD>6.1</TD><TD>-1.071065</TD><TD>0.2382513</TD><TD>0.03229052</TD></TR>
    <TR><TH>62</TH><TD>6.2</TD><TD>0.6391206</TD><TD>-0.4283499</TD><TD>-0.9460564</TD></TR>
    <TR><TH>63</TH><TD>6.3</TD><TD>-0.02129602</TD><TD>-0.6210193</TD><TD>1.669518</TD></TR>
    <TR><TH>64</TH><TD>6.4</TD><TD>0.8789429</TD><TD>-0.8569577</TD><TD>0.7040885</TD></TR>
    <TR><TH>65</TH><TD>6.5</TD><TD>-0.8044128</TD><TD>-0.5791309</TD><TD>1.158013</TD></TR>
    <TR><TH>66</TH><TD>6.6</TD><TD>1.474823</TD><TD>1.203803</TD><TD>1.656491</TD></TR>
    <TR><TH>67</TH><TD>6.7</TD><TD>-0.2605618</TD><TD>-2.72704</TD><TD>0.5875819</TD></TR>
    <TR><TH>68</TH><TD>6.8</TD><TD>-2.815473</TD><TD>0.2202595</TD><TD>1.707816</TD></TR>
    <TR><TH>69</TH><TD>6.9</TD><TD>0.9120917</TD><TD>1.192637</TD><TD>-0.4587521</TD></TR>
    <TR><TH>70</TH><TD>7</TD><TD>1.524778</TD><TD>-0.246746</TD><TD>0.7623076</TD></TR>
    <TR><TH>71</TH><TD>7.1</TD><TD>-1.748163</TD><TD>-0.5658546</TD><TD>-2.084908</TD></TR>
    <TR><TH>72</TH><TD>7.2</TD><TD>0.6480018</TD><TD>1.28735</TD><TD>0.2404443</TD></TR>
    <TR><TH>73</TH><TD>7.3</TD><TD>-0.6897505</TD><TD>1.711613</TD><TD>0.4393317</TD></TR>
    <TR><TH>74</TH><TD>7.4</TD><TD>-0.8528524</TD><TD>-0.8352737</TD><TD>1.109671</TD></TR>
    <TR><TH>75</TH><TD>7.5</TD><TD>0.3668992</TD><TD>0.2840582</TD><TD>2.098185</TD></TR>
    <TR><TH>76</TH><TD>7.6</TD><TD>-0.5463</TD><TD>0.5214562</TD><TD>-0.7110372</TD></TR>
    <TR><TH>77</TH><TD>7.7</TD><TD>-1.294471</TD><TD>0.1793523</TD><TD>1.753766</TD></TR>
    <TR><TH>78</TH><TD>7.8</TD><TD>0.4673149</TD><TD>1.326889</TD><TD>-1.088676</TD></TR>
    <TR><TH>79</TH><TD>7.9</TD><TD>-0.7117908</TD><TD>-1.291751</TD><TD>1.001505</TD></TR>
    <TR><TH>80</TH><TD>8</TD><TD>0.6587044</TD><TD>-1.465987</TD><TD>-2.289392</TD></TR>
    <TR><TH>81</TH><TD>8.1</TD><TD>0.6074961</TD><TD>-0.4320503</TD><TD>-0.207302</TD></TR>
    <TR><TH>82</TH><TD>8.2</TD><TD>0.9224311</TD><TD>0.4791631</TD><TD>0.2511686</TD></TR>
    <TR><TH>83</TH><TD>8.3</TD><TD>-1.860983</TD><TD>1.481042</TD><TD>0.04964255</TD></TR>
    <TR><TH>84</TH><TD>8.4</TD><TD>-0.1871141</TD><TD>1.187763</TD><TD>-1.256839</TD></TR>
    <TR><TH>85</TH><TD>8.5</TD><TD>-0.3439743</TD><TD>0.183169</TD><TD>-0.5022868</TD></TR>
    <TR><TH>86</TH><TD>8.6</TD><TD>-0.4769816</TD><TD>-1.563596</TD><TD>0.4836341</TD></TR>
    <TR><TH>87</TH><TD>8.7</TD><TD>0.6520573</TD><TD>1.268271</TD><TD>-0.09222983</TD></TR>
    <TR><TH>88</TH><TD>8.8</TD><TD>1.368659</TD><TD>1.201644</TD><TD>-1.463297</TD></TR>
    <TR><TH>89</TH><TD>8.9</TD><TD>-0.08670679</TD><TD>0.6765859</TD><TD>2.165009</TD></TR>
    <TR><TH>90</TH><TD>9</TD><TD>1.49675</TD><TD>-0.1054785</TD><TD>-2.160915</TD></TR>
    <TR><TH>91</TH><TD>9.1</TD><TD>0.14953</TD><TD>-0.5258041</TD><TD>-0.3039998</TD></TR>
    <TR><TH>92</TH><TD>9.2</TD><TD>-0.05036142</TD><TD>0.8297279</TD><TD>-0.2839957</TD></TR>
    <TR><TH>93</TH><TD>9.3</TD><TD>0.2642588</TD><TD>-0.08572813</TD><TD>0.2829766</TD></TR>
    <TR><TH>94</TH><TD>9.4</TD><TD>-0.4570203</TD><TD>-0.8522508</TD><TD>-0.1272129</TD></TR>
    <TR><TH>95</TH><TD>9.5</TD><TD>-1.938921</TD><TD>0.5054613</TD><TD>-0.2439029</TD></TR>
    <TR><TH>96</TH><TD>9.6</TD><TD>-0.09140759</TD><TD>-2.067526</TD><TD>-1.783602</TD></TR>
    <TR><TH>97</TH><TD>9.7</TD><TD>1.277923</TD><TD>-0.04433687</TD><TD>0.1895748</TD></TR>
    <TR><TH>98</TH><TD>9.8</TD><TD>-0.9785647</TD><TD>-0.6177446</TD><TD>1.358516</TD></TR>
    <TR><TH>99</TH><TD>9.9</TD><TD>0.6591985</TD><TD>-0.6847979</TD><TD>-0.0930263</TD></TR>
    </TABLE>
    <br />
    <br />

Get the number of values of the time series


.. code-block:: default

    myTimeSeries.getSize()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    100



Get the dimension of the values observed at each time


.. code-block:: default

    myTimeSeries.getMesh().getDimension()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    1



Get the value Xi at index i


.. code-block:: default

    i = 37
    print('Xi = ', myTimeSeries.getValueAtIndex(i))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Xi =  [-0.330858,-1.40182,0.339849]




Get the time series at index i : (ti, Xi)


.. code-block:: default

    i = 37
    print('(ti, Xi) = ', myTimeSeries[i])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    (ti, Xi) =  [-0.330858,-1.40182,0.339849]




Get a the marginal value at index i of the time series


.. code-block:: default

    i = 37
    # get the time stamp:
    print('ti = ', myTimeSeries[i, 0])
    # get the first component of the corresponding value :
    print('Xi1 = ', myTimeSeries[i, 1])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    ti =  -0.3308581965168566
    Xi1 =  -1.401820814324073




Get all the values (X1, .., Xn) of the time series


.. code-block:: default

    myTimeSeries.getValues()






.. raw:: html

    <TABLE><TR><TD></TD><TH>X0</TH><TH>X1</TH><TH>X2</TH></TR>
    <TR><TH>0</TH><TD>-0.1824838</TD><TD>-0.4403559</TD><TD>1.132474</TD></TR>
    <TR><TH>1</TH><TD>0.6745465</TD><TD>1.34247</TD><TD>1.398739</TD></TR>
    <TR><TH>2</TH><TD>0.7367821</TD><TD>-0.252381</TD><TD>1.3757</TD></TR>
    <TR><TH>3</TH><TD>-0.8587751</TD><TD>0.001090329</TD><TD>0.579508</TD></TR>
    <TR><TH>4</TH><TD>0.3836626</TD><TD>0.4942256</TD><TD>0.707441</TD></TR>
    <TR><TH>5</TH><TD>-2.797382</TD><TD>3.047523</TD><TD>-0.07637454</TD></TR>
    <TR><TH>6</TH><TD>-1.147148</TD><TD>2.571537</TD><TD>1.522949</TD></TR>
    <TR><TH>7</TH><TD>-0.4123436</TD><TD>0.1975434</TD><TD>-1.320555</TD></TR>
    <TR><TH>8</TH><TD>0.07847825</TD><TD>1.150862</TD><TD>0.3574573</TD></TR>
    <TR><TH>9</TH><TD>0.8082896</TD><TD>-0.8460937</TD><TD>0.1979967</TD></TR>
    <TR><TH>10</TH><TD>-0.3094551</TD><TD>-0.7988185</TD><TD>-1.491241</TD></TR>
    <TR><TH>11</TH><TD>0.9084451</TD><TD>-0.5728211</TD><TD>1.156641</TD></TR>
    <TR><TH>12</TH><TD>0.5084799</TD><TD>-1.566754</TD><TD>-0.08852041</TD></TR>
    <TR><TH>13</TH><TD>-0.4396728</TD><TD>-0.2164431</TD><TD>0.9924761</TD></TR>
    <TR><TH>14</TH><TD>1.24972</TD><TD>-0.07331844</TD><TD>1.407254</TD></TR>
    <TR><TH>15</TH><TD>-0.4617167</TD><TD>1.11996</TD><TD>-1.244644</TD></TR>
    <TR><TH>16</TH><TD>0.7732243</TD><TD>-0.5318689</TD><TD>-0.52065</TD></TR>
    <TR><TH>17</TH><TD>0.3838784</TD><TD>0.5908666</TD><TD>0.9716562</TD></TR>
    <TR><TH>18</TH><TD>0.4252095</TD><TD>-0.6798812</TD><TD>-0.2249922</TD></TR>
    <TR><TH>19</TH><TD>0.9110131</TD><TD>-0.06524682</TD><TD>-1.738988</TD></TR>
    <TR><TH>20</TH><TD>0.09377542</TD><TD>0.1144101</TD><TD>0.4402198</TD></TR>
    <TR><TH>21</TH><TD>-0.01304001</TD><TD>-1.136739</TD><TD>0.6385415</TD></TR>
    <TR><TH>22</TH><TD>0.6377289</TD><TD>-0.4951121</TD><TD>-0.5121626</TD></TR>
    <TR><TH>23</TH><TD>-0.9752874</TD><TD>-0.8100208</TD><TD>0.3302668</TD></TR>
    <TR><TH>24</TH><TD>-1.916166</TD><TD>0.02455777</TD><TD>0.8620839</TD></TR>
    <TR><TH>25</TH><TD>0.8635642</TD><TD>0.2578959</TD><TD>0.2637762</TD></TR>
    <TR><TH>26</TH><TD>-0.1689309</TD><TD>-0.522402</TD><TD>0.4682332</TD></TR>
    <TR><TH>27</TH><TD>-0.1400617</TD><TD>1.354969</TD><TD>-0.5971853</TD></TR>
    <TR><TH>28</TH><TD>-1.112985</TD><TD>-1.428811</TD><TD>2.208364</TD></TR>
    <TR><TH>29</TH><TD>-1.237043</TD><TD>-0.4459371</TD><TD>0.7625289</TD></TR>
    <TR><TH>30</TH><TD>-0.7564409</TD><TD>0.3947358</TD><TD>-0.8920199</TD></TR>
    <TR><TH>31</TH><TD>-0.6359006</TD><TD>-0.7376064</TD><TD>-0.1912633</TD></TR>
    <TR><TH>32</TH><TD>-0.4270532</TD><TD>-0.2999664</TD><TD>-1.875619</TD></TR>
    <TR><TH>33</TH><TD>-1.153489</TD><TD>0.6319036</TD><TD>-0.2558087</TD></TR>
    <TR><TH>34</TH><TD>0.527049</TD><TD>-0.5257207</TD><TD>1.363352</TD></TR>
    <TR><TH>35</TH><TD>-0.5492806</TD><TD>0.7344462</TD><TD>0.5173155</TD></TR>
    <TR><TH>36</TH><TD>0.06236516</TD><TD>-1.392551</TD><TD>-2.649476</TD></TR>
    <TR><TH>37</TH><TD>-0.3308582</TD><TD>-1.401821</TD><TD>0.3398492</TD></TR>
    <TR><TH>38</TH><TD>0.8920179</TD><TD>0.7697032</TD><TD>0.3282534</TD></TR>
    <TR><TH>39</TH><TD>-0.7720165</TD><TD>-0.3335678</TD><TD>2.058606</TD></TR>
    <TR><TH>40</TH><TD>0.8137651</TD><TD>0.7026201</TD><TD>0.1305007</TD></TR>
    <TR><TH>41</TH><TD>-0.8591256</TD><TD>1.606435</TD><TD>-0.3510362</TD></TR>
    <TR><TH>42</TH><TD>0.02719343</TD><TD>-1.448844</TD><TD>1.154483</TD></TR>
    <TR><TH>43</TH><TD>-1.12584</TD><TD>1.556847</TD><TD>-0.1988698</TD></TR>
    <TR><TH>44</TH><TD>-0.529622</TD><TD>1.17651</TD><TD>0.2932139</TD></TR>
    <TR><TH>45</TH><TD>-0.4073566</TD><TD>0.3467122</TD><TD>-1.036869</TD></TR>
    <TR><TH>46</TH><TD>0.01581702</TD><TD>-0.6762781</TD><TD>0.4241955</TD></TR>
    <TR><TH>47</TH><TD>-1.289054</TD><TD>1.082821</TD><TD>-0.9535527</TD></TR>
    <TR><TH>48</TH><TD>-1.633061</TD><TD>1.365407</TD><TD>0.1644739</TD></TR>
    <TR><TH>49</TH><TD>-1.167478</TD><TD>-0.5340412</TD><TD>-0.5641792</TD></TR>
    <TR><TH>50</TH><TD>0.3008715</TD><TD>1.687641</TD><TD>-0.119298</TD></TR>
    <TR><TH>51</TH><TD>-0.543738</TD><TD>-2.448224</TD><TD>0.2527243</TD></TR>
    <TR><TH>52</TH><TD>0.02908425</TD><TD>-1.11237</TD><TD>-0.7370888</TD></TR>
    <TR><TH>53</TH><TD>1.642798</TD><TD>-2.0151</TD><TD>1.181847</TD></TR>
    <TR><TH>54</TH><TD>-0.05483563</TD><TD>-0.1349175</TD><TD>0.5691794</TD></TR>
    <TR><TH>55</TH><TD>0.7776005</TD><TD>0.2669536</TD><TD>-1.286173</TD></TR>
    <TR><TH>56</TH><TD>0.1923625</TD><TD>-0.6325928</TD><TD>-0.1977164</TD></TR>
    <TR><TH>57</TH><TD>-1.007348</TD><TD>0.5038206</TD><TD>-0.8882761</TD></TR>
    <TR><TH>58</TH><TD>1.881779</TD><TD>-0.789546</TD><TD>0.4265443</TD></TR>
    <TR><TH>59</TH><TD>-0.3041803</TD><TD>0.4335531</TD><TD>1.703603</TD></TR>
    <TR><TH>60</TH><TD>-0.478431</TD><TD>-0.8987942</TD><TD>-0.104475</TD></TR>
    <TR><TH>61</TH><TD>-0.7441071</TD><TD>1.10736</TD><TD>-0.4217685</TD></TR>
    <TR><TH>62</TH><TD>1.849343</TD><TD>0.9078336</TD><TD>-0.4005217</TD></TR>
    <TR><TH>63</TH><TD>0.287392</TD><TD>0.5432461</TD><TD>-0.4284768</TD></TR>
    <TR><TH>64</TH><TD>-1.342138</TD><TD>0.1093661</TD><TD>-0.6297741</TD></TR>
    <TR><TH>65</TH><TD>-1.29804</TD><TD>-1.054826</TD><TD>-0.7907677</TD></TR>
    <TR><TH>66</TH><TD>2.264132</TD><TD>0.004324857</TD><TD>-0.2080225</TD></TR>
    <TR><TH>67</TH><TD>-0.9658142</TD><TD>-1.045708</TD><TD>0.8006405</TD></TR>
    <TR><TH>68</TH><TD>-2.111424</TD><TD>-0.4750612</TD><TD>0.6642585</TD></TR>
    <TR><TH>69</TH><TD>0.7522429</TD><TD>1.424315</TD><TD>1.535688</TD></TR>
    <TR><TH>70</TH><TD>-0.5340135</TD><TD>-0.08578498</TD><TD>0.1288659</TD></TR>
    <TR><TH>71</TH><TD>0.24489</TD><TD>-0.797195</TD><TD>0.9884785</TD></TR>
    <TR><TH>72</TH><TD>-0.03382174</TD><TD>0.6950574</TD><TD>2.776844</TD></TR>
    <TR><TH>73</TH><TD>0.5574622</TD><TD>0.4418714</TD><TD>1.118012</TD></TR>
    <TR><TH>74</TH><TD>0.1109384</TD><TD>-0.2623889</TD><TD>0.3417789</TD></TR>
    <TR><TH>75</TH><TD>-0.7661217</TD><TD>-0.5706632</TD><TD>0.7188506</TD></TR>
    <TR><TH>76</TH><TD>-0.7824923</TD><TD>0.05308881</TD><TD>0.4695268</TD></TR>
    <TR><TH>77</TH><TD>-0.8243218</TD><TD>0.06598585</TD><TD>1.308104</TD></TR>
    <TR><TH>78</TH><TD>0.08678973</TD><TD>0.2266022</TD><TD>-1.135762</TD></TR>
    <TR><TH>79</TH><TD>-0.1163204</TD><TD>0.5064792</TD><TD>0.5437157</TD></TR>
    <TR><TH>80</TH><TD>0.5276222</TD><TD>-0.8799274</TD><TD>-0.8533455</TD></TR>
    <TR><TH>81</TH><TD>-0.8129643</TD><TD>-0.3887334</TD><TD>0.6460432</TD></TR>
    <TR><TH>82</TH><TD>-0.9686388</TD><TD>1.693706</TD><TD>0.7725672</TD></TR>
    <TR><TH>83</TH><TD>-1.663448</TD><TD>1.855849</TD><TD>-1.348466</TD></TR>
    <TR><TH>84</TH><TD>1.494702</TD><TD>0.2087813</TD><TD>1.154285</TD></TR>
    <TR><TH>85</TH><TD>-0.5088572</TD><TD>0.4711006</TD><TD>-1.043329</TD></TR>
    <TR><TH>86</TH><TD>0.2258432</TD><TD>-0.1596775</TD><TD>0.2694374</TD></TR>
    <TR><TH>87</TH><TD>1.961616</TD><TD>-1.178402</TD><TD>-0.8726679</TD></TR>
    <TR><TH>88</TH><TD>0.07489477</TD><TD>0.9358671</TD><TD>1.681411</TD></TR>
    <TR><TH>89</TH><TD>-0.5089258</TD><TD>1.749942</TD><TD>1.029307</TD></TR>
    <TR><TH>90</TH><TD>0.5270572</TD><TD>-1.106128</TD><TD>-0.332096</TD></TR>
    <TR><TH>91</TH><TD>-0.3209623</TD><TD>-1.788576</TD><TD>-0.6620917</TD></TR>
    <TR><TH>92</TH><TD>0.5931534</TD><TD>1.02311</TD><TD>-0.7622161</TD></TR>
    <TR><TH>93</TH><TD>-1.064708</TD><TD>-1.748614</TD><TD>0.8059907</TD></TR>
    <TR><TH>94</TH><TD>-0.225593</TD><TD>1.926831</TD><TD>-1.94564</TD></TR>
    <TR><TH>95</TH><TD>-0.3794463</TD><TD>0.4013089</TD><TD>1.178926</TD></TR>
    <TR><TH>96</TH><TD>-0.5532393</TD><TD>-1.154224</TD><TD>-0.0443501</TD></TR>
    <TR><TH>97</TH><TD>0.4079327</TD><TD>-1.3633</TD><TD>0.392107</TD></TR>
    <TR><TH>98</TH><TD>1.037367</TD><TD>0.6248955</TD><TD>0.02482525</TD></TR>
    <TR><TH>99</TH><TD>2.544377</TD><TD>-0.59357</TD><TD>-0.8490439</TD></TR>
    </TABLE>
    <br />
    <br />

Compute the temporal Mean
It corresponds to the mean of the values of the time series


.. code-block:: default

    myTimeSeries.getInputMean()






.. raw:: html

    <p>[-0.0791696,0.0141695,0.101313]</p>
    <br />
    <br />

Draw the marginal i of the time series using linear interpolation


.. code-block:: default

    graph = myTimeSeries.drawMarginal(0)
    view = viewer.View(graph)




.. image:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_001.png
    :alt: Unnamed - 0 marginal
    :class: sphx-glr-single-img





with no interpolation


.. code-block:: default

    graph = myTimeSeries.drawMarginal(0, False)
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_002.png
    :alt: Unnamed - 0 marginal
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.137 seconds)


.. _sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_timeseries_manipulation.py <plot_timeseries_manipulation.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_timeseries_manipulation.ipynb <plot_timeseries_manipulation.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
