openturns/1.17/_sources/auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_probabilistic_modeling/stochastic_processes/plot_timeseries_manipulation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:


Manipulate a time series
========================

.. GENERATED FROM PYTHON SOURCE LINES 6-17

The objective here is to create and manipulate a time series. A time series is a particular field where the mesh :math:`\mathcal{M}` 1-d and regular, eg a time grid :math:`(t_0, \dots, t_{N-1})`.

It is possible to draw a time series, using interpolation between the values: see the use case on the Field.

A time series can be obtained as a realization of a multivariate stochastic process  :math:`X: \Omega \times [0,T] \rightarrow \mathbb{R}^d`   of dimension :math:`d` where :math:`[0,T]` is discretized according to the regular grid :math:`(t_0, \dots, t_{N-1})` . The  values :math:`(\underline{x}_0, \dots, \underline{x}_{N-1})` of the  time series are defined by:

.. math::  
   \forall i \in [0, N-1],\quad \underline{x}_i= X(\omega)(t_i)


A time series is stored in the **TimeSeries** object that stores the regular time grid and the associated values.

.. GENERATED FROM PYTHON SOURCE LINES 19-26

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    import math as m
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 27-28

Create the RegularGrid

.. GENERATED FROM PYTHON SOURCE LINES 28-33

.. code-block:: default

    tMin = 0.
    timeStep = 0.1
    N = 100
    myTimeGrid = ot.RegularGrid(tMin, timeStep, N)








.. GENERATED FROM PYTHON SOURCE LINES 34-36

Case 1: Create a time series from a time grid and values
Care! The number of steps of the time grid must correspond to the size of the values

.. GENERATED FROM PYTHON SOURCE LINES 36-40

.. code-block:: default

    myValues = ot.Normal(3).getSample(myTimeGrid.getVertices().getSize())
    myTimeSeries = ot.TimeSeries(myTimeGrid, myValues)
    myTimeSeries






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>     [ t           X0          X1          X2          ]<br>
     0 : [  0           1.06975    -1.77994    -0.832708   ]<br>
     1 : [  0.1        -0.245372   -0.0205006  -0.170101   ]<br>
     2 : [  0.2         0.529296   -0.725104   -1.16247    ]<br>
     3 : [  0.3         0.199523    0.727148   -0.260688   ]<br>
     4 : [  0.4        -0.136772    0.52023    -0.659133   ]<br>
     5 : [  0.5        -0.180673   -1.04885     0.512371   ]<br>
     6 : [  0.6         0.20648    -0.960832    0.414682   ]<br>
     7 : [  0.7        -1.22871     2.57497    -0.00804901 ]<br>
     8 : [  0.8        -1.8859      0.830757   -0.378346   ]<br>
     9 : [  0.9         0.479046    1.60938    -0.570841   ]<br>
    10 : [  1           0.269096    0.803503    0.583218   ]<br>
    11 : [  1.1         0.449756   -0.693556    1.89666    ]<br>
    12 : [  1.2         0.0270818  -0.258272   -0.37012    ]<br>
    13 : [  1.3         0.0456596  -0.343048   -0.392484   ]<br>
    14 : [  1.4        -2.41093     1.93921    -0.590044   ]<br>
    15 : [  1.5         0.22705    -0.141765    0.855507   ]<br>
    16 : [  1.6         0.286761    0.564812   -0.509701   ]<br>
    17 : [  1.7         1.40334    -1.37852     0.434035   ]<br>
    18 : [  1.8         0.0342518   0.896116   -0.870577   ]<br>
    19 : [  1.9         1.36995     0.272597    0.579223   ]<br>
    20 : [  2          -1.5321      0.957065    0.427663   ]<br>
    21 : [  2.1        -0.36668     0.648699   -0.00464944 ]<br>
    22 : [  2.2         0.171548   -0.0795761   0.455389   ]<br>
    23 : [  2.3        -2.14009     0.933245    0.818686   ]<br>
    24 : [  2.4        -1.54826     0.370246   -0.773089   ]<br>
    25 : [  2.5        -0.0129833   0.187309   -2.13145    ]<br>
    26 : [  2.6        -1.19768    -0.00500185 -0.125673   ]<br>
    27 : [  2.7        -1.89201     3.40565    -0.103576   ]<br>
    28 : [  2.8         0.415448    0.727255    0.978855   ]<br>
    29 : [  2.9         1.15808     0.295275    0.283934   ]<br>
    30 : [  3           1.29426     0.200773    0.342265   ]<br>
    31 : [  3.1         0.164085   -0.608383    0.144346   ]<br>
    32 : [  3.2         0.537733    0.696557    1.18791    ]<br>
    33 : [  3.3         2.18097    -0.194809    0.628316   ]<br>
    34 : [  3.4         0.230866   -0.648071   -0.0280203  ]<br>
    35 : [  3.5         0.871005    1.24473    -0.106358   ]<br>
    36 : [  3.6        -0.234489   -2.0102      0.121701   ]<br>
    37 : [  3.7        -1.33163    -0.825457   -1.21658    ]<br>
    38 : [  3.8        -1.02579    -1.22486    -0.735057   ]<br>
    39 : [  3.9         0.267431   -0.313967    0.328403   ]<br>
    40 : [  4          -1.18542     0.272577   -0.537997   ]<br>
    41 : [  4.1        -0.154628    0.0348939   0.357208   ]<br>
    42 : [  4.2         0.87381    -1.4897     -1.60323    ]<br>
    43 : [  4.3         0.276884   -0.205279    0.313591   ]<br>
    44 : [  4.4         1.52063     2.12789     0.15741    ]<br>
    45 : [  4.5         0.056432    1.05201    -1.06929    ]<br>
    46 : [  4.6         0.0389696   0.108862    1.56022    ]<br>
    47 : [  4.7         0.897858    0.0713179   0.329058   ]<br>
    48 : [  4.8         0.768345   -0.201722    0.148307   ]<br>
    49 : [  4.9         0.498826   -0.540609    0.202215   ]<br>
    50 : [  5           1.52964    -1.19218     0.524954   ]<br>
    51 : [  5.1        -0.127176    1.00122     0.299567   ]<br>
    52 : [  5.2        -0.0732479  -0.592801    0.509773   ]<br>
    53 : [  5.3         1.56808     0.369343    0.687346   ]<br>
    54 : [  5.4         0.26022     1.5601      0.68388    ]<br>
    55 : [  5.5        -0.260408    0.169652   -1.01657    ]<br>
    56 : [  5.6         0.810285   -0.934548    0.440233   ]<br>
    57 : [  5.7         0.102655    0.16255     0.977606   ]<br>
    58 : [  5.8        -0.685128   -0.0411968  -0.161531   ]<br>
    59 : [  5.9         0.00948899 -0.699237    0.835643   ]<br>
    60 : [  6           0.961209   -0.395342    0.250509   ]<br>
    61 : [  6.1        -1.71279    -0.303372    1.71343    ]<br>
    62 : [  6.2         0.287997   -0.346204   -1.24308    ]<br>
    63 : [  6.3        -0.661934   -0.539626    0.78918    ]<br>
    64 : [  6.4         0.525199    0.265505   -0.615353   ]<br>
    65 : [  6.5         0.667728   -0.320656   -0.00603524 ]<br>
    66 : [  6.6        -1.44043     0.0706512   0.400517   ]<br>
    67 : [  6.7        -0.537003   -2.13043     0.186229   ]<br>
    68 : [  6.8        -1.32629     0.242601   -0.897333   ]<br>
    69 : [  6.9        -0.957364    1.58824    -0.238077   ]<br>
    70 : [  7          -0.654398    1.49892    -0.713136   ]<br>
    71 : [  7.1        -1.33516     0.567629    0.640198   ]<br>
    72 : [  7.2        -0.259729    0.192286   -1.40222    ]<br>
    73 : [  7.3         0.560018   -1.35624     1.03452    ]<br>
    74 : [  7.4        -0.378793   -0.125727   -0.587836   ]<br>
    75 : [  7.5         1.07894    -1.66939     1.70834    ]<br>
    76 : [  7.6        -0.845941   -0.178621   -0.195884   ]<br>
    77 : [  7.7         1.81133     0.400036    1.10812    ]<br>
    78 : [  7.8        -0.455236   -0.793417    2.28383    ]<br>
    79 : [  7.9         0.351885   -0.0608221   1.18257    ]<br>
    80 : [  8           2.05724     2.0836     -1.10946    ]<br>
    81 : [  8.1         0.646117    0.314088   -1.25919    ]<br>
    82 : [  8.2         2.51347     1.10677    -1.23708    ]<br>
    83 : [  8.3        -0.405063    1.24478     0.258866   ]<br>
    84 : [  8.4        -0.1138      0.3815      0.155791   ]<br>
    85 : [  8.5         0.402412    1.33272    -0.805619   ]<br>
    86 : [  8.6         0.385421   -1.61086    -0.687429   ]<br>
    87 : [  8.7        -0.021074   -1.40527    -0.602909   ]<br>
    88 : [  8.8        -0.0745371  -0.287633   -0.402623   ]<br>
    89 : [  8.9        -0.489432   -0.580339    1.19649    ]<br>
    90 : [  9           1.00456     0.537257   -0.0877091  ]<br>
    91 : [  9.1         1.42393     0.682015    2.88405    ]<br>
    92 : [  9.2         0.279699   -1.179      -0.143892   ]<br>
    93 : [  9.3         0.681308    0.0143792   0.50997    ]<br>
    94 : [  9.4        -1.06023     0.0448366   0.24992    ]<br>
    95 : [  9.5         1.24773    -0.3856     -0.288073   ]<br>
    96 : [  9.6        -0.589052    0.499575    1.13231    ]<br>
    97 : [  9.7        -0.843781    1.43619    -0.18765    ]<br>
    98 : [  9.8         0.940522    0.715112   -1.43932    ]<br>
    99 : [  9.9        -0.14294    -0.176589    0.905433   ]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 41-42

Case 2: Get a time series from a Process

.. GENERATED FROM PYTHON SOURCE LINES 42-46

.. code-block:: default

    myProcess = ot.WhiteNoise(ot.Normal(3), myTimeGrid)
    myTimeSeries2 = myProcess.getRealization()
    myTimeSeries2






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <TABLE><TR><TD></TD><TH>t</TH><TH>X0</TH><TH>X1</TH><TH>X2</TH></TR>
    <TR><TH>0</TH><TD>0</TD><TD>0.6688361</TD><TD>-0.1848348</TD><TD>-0.2056171</TD></TR>
    <TR><TH>1</TH><TD>0.1</TD><TD>0.8539061</TD><TD>1.082717</TD><TD>0.7860448</TD></TR>
    <TR><TH>2</TH><TD>0.2</TD><TD>-1.839514</TD><TD>-0.4807376</TD><TD>-0.7431111</TD></TR>
    <TR><TH>3</TH><TD>0.3</TD><TD>0.2583894</TD><TD>0.06498678</TD><TD>0.8220976</TD></TR>
    <TR><TH>4</TH><TD>0.4</TD><TD>-0.2202976</TD><TD>-1.267407</TD><TD>0.06548754</TD></TR>
    <TR><TH>5</TH><TD>0.5</TD><TD>-2.506485</TD><TD>0.2182682</TD><TD>-0.3734256</TD></TR>
    <TR><TH>6</TH><TD>0.6</TD><TD>-0.3483342</TD><TD>-1.020392</TD><TD>-0.9373684</TD></TR>
    <TR><TH>7</TH><TD>0.7</TD><TD>0.793814</TD><TD>-0.983334</TD><TD>-0.4151898</TD></TR>
    <TR><TH>8</TH><TD>0.8</TD><TD>0.1049272</TD><TD>-0.4991656</TD><TD>0.3643877</TD></TR>
    <TR><TH>9</TH><TD>0.9</TD><TD>-0.1627931</TD><TD>0.4925782</TD><TD>0.3548167</TD></TR>
    <TR><TH>10</TH><TD>1</TD><TD>-0.8811936</TD><TD>-0.819895</TD><TD>-2.106536</TD></TR>
    <TR><TH>11</TH><TD>1.1</TD><TD>0.1773956</TD><TD>-0.04881701</TD><TD>-0.9867962</TD></TR>
    <TR><TH>12</TH><TD>1.2</TD><TD>-0.8862132</TD><TD>1.219161</TD><TD>0.266691</TD></TR>
    <TR><TH>13</TH><TD>1.3</TD><TD>0.188304</TD><TD>0.8090514</TD><TD>1.619885</TD></TR>
    <TR><TH>14</TH><TD>1.4</TD><TD>-0.5646788</TD><TD>-0.9921044</TD><TD>0.7245245</TD></TR>
    <TR><TH>15</TH><TD>1.5</TD><TD>0.3057475</TD><TD>-0.4119946</TD><TD>2.759856</TD></TR>
    <TR><TH>16</TH><TD>1.6</TD><TD>0.4088039</TD><TD>1.121707</TD><TD>-0.6501654</TD></TR>
    <TR><TH>17</TH><TD>1.7</TD><TD>-1.034288</TD><TD>1.150379</TD><TD>0.5587453</TD></TR>
    <TR><TH>18</TH><TD>1.8</TD><TD>1.332409</TD><TD>-0.3225148</TD><TD>0.4750779</TD></TR>
    <TR><TH>19</TH><TD>1.9</TD><TD>-0.1536095</TD><TD>1.035535</TD><TD>1.381175</TD></TR>
    <TR><TH>20</TH><TD>2</TD><TD>1.225896</TD><TD>-0.1056646</TD><TD>0.3069166</TD></TR>
    <TR><TH>21</TH><TD>2.1</TD><TD>0.4924758</TD><TD>0.4262604</TD><TD>-0.5698308</TD></TR>
    <TR><TH>22</TH><TD>2.2</TD><TD>-0.4156163</TD><TD>-2.609303</TD><TD>-2.173168</TD></TR>
    <TR><TH>23</TH><TD>2.3</TD><TD>-1.324497</TD><TD>-1.45585</TD><TD>0.1801837</TD></TR>
    <TR><TH>24</TH><TD>2.4</TD><TD>1.421198</TD><TD>1.866039</TD><TD>-0.1742316</TD></TR>
    <TR><TH>25</TH><TD>2.5</TD><TD>-1.55547</TD><TD>1.4884</TD><TD>1.303924</TD></TR>
    <TR><TH>26</TH><TD>2.6</TD><TD>-1.061323</TD><TD>-1.305955</TD><TD>-1.629615</TD></TR>
    <TR><TH>27</TH><TD>2.7</TD><TD>-0.2962869</TD><TD>0.8739792</TD><TD>0.1051378</TD></TR>
    <TR><TH>28</TH><TD>2.8</TD><TD>-0.02998592</TD><TD>-1.516032</TD><TD>1.474471</TD></TR>
    <TR><TH>29</TH><TD>2.9</TD><TD>-1.03669</TD><TD>-1.534651</TD><TD>0.8259901</TD></TR>
    <TR><TH>30</TH><TD>3</TD><TD>0.457382</TD><TD>-0.3865615</TD><TD>1.28411</TD></TR>
    <TR><TH>31</TH><TD>3.1</TD><TD>-0.3259461</TD><TD>1.637177</TD><TD>-0.8420178</TD></TR>
    <TR><TH>32</TH><TD>3.2</TD><TD>-0.2924097</TD><TD>0.3615991</TD><TD>0.4570965</TD></TR>
    <TR><TH>33</TH><TD>3.3</TD><TD>0.237978</TD><TD>1.020826</TD><TD>1.699262</TD></TR>
    <TR><TH>34</TH><TD>3.4</TD><TD>-0.5438809</TD><TD>0.4973056</TD><TD>-1.469904</TD></TR>
    <TR><TH>35</TH><TD>3.5</TD><TD>-2.294773</TD><TD>-0.2623551</TD><TD>-1.554523</TD></TR>
    <TR><TH>36</TH><TD>3.6</TD><TD>-2.82731</TD><TD>0.5825531</TD><TD>0.4139608</TD></TR>
    <TR><TH>37</TH><TD>3.7</TD><TD>-0.9302437</TD><TD>0.549059</TD><TD>-0.69065</TD></TR>
    <TR><TH>38</TH><TD>3.8</TD><TD>-0.6021352</TD><TD>-0.7677184</TD><TD>1.285077</TD></TR>
    <TR><TH>39</TH><TD>3.9</TD><TD>-0.22259</TD><TD>1.221741</TD><TD>0.4439343</TD></TR>
    <TR><TH>40</TH><TD>4</TD><TD>-0.7078664</TD><TD>-1.056912</TD><TD>0.5648551</TD></TR>
    <TR><TH>41</TH><TD>4.1</TD><TD>0.2980986</TD><TD>1.342418</TD><TD>1.085837</TD></TR>
    <TR><TH>42</TH><TD>4.2</TD><TD>0.8239627</TD><TD>-0.6283856</TD><TD>-0.8834576</TD></TR>
    <TR><TH>43</TH><TD>4.3</TD><TD>0.8607533</TD><TD>1.456264</TD><TD>0.1421699</TD></TR>
    <TR><TH>44</TH><TD>4.4</TD><TD>-0.3323323</TD><TD>0.8952978</TD><TD>0.1655028</TD></TR>
    <TR><TH>45</TH><TD>4.5</TD><TD>0.02714461</TD><TD>0.1645807</TD><TD>0.2626963</TD></TR>
    <TR><TH>46</TH><TD>4.6</TD><TD>1.638611</TD><TD>0.1818056</TD><TD>-0.1240066</TD></TR>
    <TR><TH>47</TH><TD>4.7</TD><TD>1.56386</TD><TD>-0.5471615</TD><TD>0.4136208</TD></TR>
    <TR><TH>48</TH><TD>4.8</TD><TD>-0.5009097</TD><TD>-1.561814</TD><TD>-2.157897</TD></TR>
    <TR><TH>49</TH><TD>4.9</TD><TD>-0.8845609</TD><TD>-0.03278067</TD><TD>-0.4371368</TD></TR>
    <TR><TH>50</TH><TD>5</TD><TD>0.9263022</TD><TD>0.3640217</TD><TD>1.127778</TD></TR>
    <TR><TH>51</TH><TD>5.1</TD><TD>-0.2958129</TD><TD>0.521623</TD><TD>-0.5048369</TD></TR>
    <TR><TH>52</TH><TD>5.2</TD><TD>-1.126024</TD><TD>-0.1538759</TD><TD>0.9138794</TD></TR>
    <TR><TH>53</TH><TD>5.3</TD><TD>-2.058274</TD><TD>1.093646</TD><TD>0.353957</TD></TR>
    <TR><TH>54</TH><TD>5.4</TD><TD>-0.5708488</TD><TD>1.521397</TD><TD>0.2852253</TD></TR>
    <TR><TH>55</TH><TD>5.5</TD><TD>-1.835236</TD><TD>-0.3044852</TD><TD>0.9165636</TD></TR>
    <TR><TH>56</TH><TD>5.6</TD><TD>0.9140664</TD><TD>0.1075705</TD><TD>0.06927429</TD></TR>
    <TR><TH>57</TH><TD>5.7</TD><TD>-0.6650488</TD><TD>1.951216</TD><TD>0.7997068</TD></TR>
    <TR><TH>58</TH><TD>5.8</TD><TD>-0.8125796</TD><TD>-0.5797791</TD><TD>0.1117721</TD></TR>
    <TR><TH>59</TH><TD>5.9</TD><TD>-0.2133026</TD><TD>-1.116885</TD><TD>-0.872058</TD></TR>
    <TR><TH>60</TH><TD>6</TD><TD>1.629164</TD><TD>3.399959</TD><TD>-0.9405087</TD></TR>
    <TR><TH>61</TH><TD>6.1</TD><TD>0.8080016</TD><TD>-0.5450092</TD><TD>1.626903</TD></TR>
    <TR><TH>62</TH><TD>6.2</TD><TD>-0.06128802</TD><TD>0.308256</TD><TD>-0.9618253</TD></TR>
    <TR><TH>63</TH><TD>6.3</TD><TD>-1.255094</TD><TD>0.4358796</TD><TD>-0.7273887</TD></TR>
    <TR><TH>64</TH><TD>6.4</TD><TD>-0.3513546</TD><TD>-1.318261</TD><TD>-0.47417</TD></TR>
    <TR><TH>65</TH><TD>6.5</TD><TD>-0.1005602</TD><TD>1.643525</TD><TD>-0.4139103</TD></TR>
    <TR><TH>66</TH><TD>6.6</TD><TD>0.8686027</TD><TD>-0.4322521</TD><TD>1.012874</TD></TR>
    <TR><TH>67</TH><TD>6.7</TD><TD>-1.114927</TD><TD>0.469528</TD><TD>0.9161205</TD></TR>
    <TR><TH>68</TH><TD>6.8</TD><TD>-0.356955</TD><TD>1.022334</TD><TD>-2.00257</TD></TR>
    <TR><TH>69</TH><TD>6.9</TD><TD>-1.71516</TD><TD>0.6274581</TD><TD>-1.352094</TD></TR>
    <TR><TH>70</TH><TD>7</TD><TD>-0.03491598</TD><TD>-0.03793251</TD><TD>0.05596954</TD></TR>
    <TR><TH>71</TH><TD>7.1</TD><TD>-0.2810947</TD><TD>0.144073</TD><TD>-2.171863</TD></TR>
    <TR><TH>72</TH><TD>7.2</TD><TD>-0.3389453</TD><TD>0.5843859</TD><TD>-0.8390798</TD></TR>
    <TR><TH>73</TH><TD>7.3</TD><TD>-1.04138</TD><TD>0.3519497</TD><TD>1.069267</TD></TR>
    <TR><TH>74</TH><TD>7.4</TD><TD>-2.866462</TD><TD>1.182504</TD><TD>0.2067203</TD></TR>
    <TR><TH>75</TH><TD>7.5</TD><TD>-0.6907754</TD><TD>-0.7425984</TD><TD>1.164752</TD></TR>
    <TR><TH>76</TH><TD>7.6</TD><TD>-0.09003073</TD><TD>-1.209451</TD><TD>0.7730654</TD></TR>
    <TR><TH>77</TH><TD>7.7</TD><TD>-0.8069562</TD><TD>-1.046643</TD><TD>0.1396704</TD></TR>
    <TR><TH>78</TH><TD>7.8</TD><TD>1.067365</TD><TD>0.1232827</TD><TD>-0.776005</TD></TR>
    <TR><TH>79</TH><TD>7.9</TD><TD>-0.882326</TD><TD>-0.0145659</TD><TD>0.2200673</TD></TR>
    <TR><TH>80</TH><TD>8</TD><TD>0.4727389</TD><TD>-0.3159074</TD><TD>1.723677</TD></TR>
    <TR><TH>81</TH><TD>8.1</TD><TD>0.5338985</TD><TD>0.4875888</TD><TD>-0.5419431</TD></TR>
    <TR><TH>82</TH><TD>8.2</TD><TD>0.7959215</TD><TD>-0.9714537</TD><TD>-0.3666259</TD></TR>
    <TR><TH>83</TH><TD>8.3</TD><TD>0.1363355</TD><TD>1.229809</TD><TD>-0.4606246</TD></TR>
    <TR><TH>84</TH><TD>8.4</TD><TD>0.5330227</TD><TD>-0.9875807</TD><TD>0.2573491</TD></TR>
    <TR><TH>85</TH><TD>8.5</TD><TD>0.415046</TD><TD>-0.7534109</TD><TD>0.07963906</TD></TR>
    <TR><TH>86</TH><TD>8.6</TD><TD>0.5442014</TD><TD>-1.354907</TD><TD>-0.03364811</TD></TR>
    <TR><TH>87</TH><TD>8.7</TD><TD>-0.7464795</TD><TD>-0.6355808</TD><TD>0.7484256</TD></TR>
    <TR><TH>88</TH><TD>8.8</TD><TD>-1.11568</TD><TD>0.1287166</TD><TD>0.8080038</TD></TR>
    <TR><TH>89</TH><TD>8.9</TD><TD>-0.5232872</TD><TD>-0.02984434</TD><TD>0.04724269</TD></TR>
    <TR><TH>90</TH><TD>9</TD><TD>0.3280034</TD><TD>-1.044189</TD><TD>-0.07286712</TD></TR>
    <TR><TH>91</TH><TD>9.1</TD><TD>2.15871</TD><TD>-0.2920541</TD><TD>-1.050486</TD></TR>
    <TR><TH>92</TH><TD>9.2</TD><TD>-0.294708</TD><TD>1.053643</TD><TD>-0.186262</TD></TR>
    <TR><TH>93</TH><TD>9.3</TD><TD>-1.741194</TD><TD>-0.7187186</TD><TD>0.3079888</TD></TR>
    <TR><TH>94</TH><TD>9.4</TD><TD>-0.1860214</TD><TD>-1.403891</TD><TD>0.8369425</TD></TR>
    <TR><TH>95</TH><TD>9.5</TD><TD>-2.217396</TD><TD>-1.196006</TD><TD>0.9390647</TD></TR>
    <TR><TH>96</TH><TD>9.6</TD><TD>0.55349</TD><TD>0.9341016</TD><TD>-1.968257</TD></TR>
    <TR><TH>97</TH><TD>9.7</TD><TD>0.04515048</TD><TD>-0.2381485</TD><TD>0.3987472</TD></TR>
    <TR><TH>98</TH><TD>9.8</TD><TD>-1.37868</TD><TD>-0.6811075</TD><TD>0.339187</TD></TR>
    <TR><TH>99</TH><TD>9.9</TD><TD>0.6905608</TD><TD>-0.2576185</TD><TD>1.481621</TD></TR>
    </TABLE>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 47-48

Get the number of values of the time series

.. GENERATED FROM PYTHON SOURCE LINES 48-50

.. code-block:: default

    myTimeSeries.getSize()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    100



.. GENERATED FROM PYTHON SOURCE LINES 51-52

Get the dimension of the values observed at each time

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: default

    myTimeSeries.getMesh().getDimension()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    1



.. GENERATED FROM PYTHON SOURCE LINES 55-56

Get the value Xi at index i

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: default

    i = 37
    print('Xi = ', myTimeSeries.getValueAtIndex(i))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Xi =  [-1.33163,-0.825457,-1.21658]




.. GENERATED FROM PYTHON SOURCE LINES 60-61

Get the time series at index i : Xi

.. GENERATED FROM PYTHON SOURCE LINES 61-64

.. code-block:: default

    i = 37
    print('Xi = ', myTimeSeries[i])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Xi =  [-1.33163,-0.825457,-1.21658]




.. GENERATED FROM PYTHON SOURCE LINES 65-66

Get a the marginal value at index i of the time series

.. GENERATED FROM PYTHON SOURCE LINES 66-72

.. code-block:: default

    i = 37
    # get the time stamp:
    print('ti = ', myTimeSeries.getTimeGrid().getValue(i))
    # get the first component of the corresponding value :
    print('Xi1 = ', myTimeSeries[i, 0])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    ti =  3.7
    Xi1 =  -1.3316320019575207




.. GENERATED FROM PYTHON SOURCE LINES 73-74

Get all the values (X1, .., Xn) of the time series

.. GENERATED FROM PYTHON SOURCE LINES 74-76

.. code-block:: default

    myTimeSeries.getValues()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <TABLE><TR><TD></TD><TH>X0</TH><TH>X1</TH><TH>X2</TH></TR>
    <TR><TH>0</TH><TD>1.069747</TD><TD>-1.779941</TD><TD>-0.8327076</TD></TR>
    <TR><TH>1</TH><TD>-0.2453716</TD><TD>-0.0205006</TD><TD>-0.1701006</TD></TR>
    <TR><TH>2</TH><TD>0.5292955</TD><TD>-0.7251038</TD><TD>-1.162473</TD></TR>
    <TR><TH>3</TH><TD>0.1995235</TD><TD>0.7271477</TD><TD>-0.2606875</TD></TR>
    <TR><TH>4</TH><TD>-0.1367718</TD><TD>0.5202298</TD><TD>-0.6591333</TD></TR>
    <TR><TH>5</TH><TD>-0.1806734</TD><TD>-1.048847</TD><TD>0.5123711</TD></TR>
    <TR><TH>6</TH><TD>0.2064803</TD><TD>-0.960832</TD><TD>0.4146824</TD></TR>
    <TR><TH>7</TH><TD>-1.228714</TD><TD>2.57497</TD><TD>-0.008049008</TD></TR>
    <TR><TH>8</TH><TD>-1.885899</TD><TD>0.830757</TD><TD>-0.3783459</TD></TR>
    <TR><TH>9</TH><TD>0.4790463</TD><TD>1.609382</TD><TD>-0.5708413</TD></TR>
    <TR><TH>10</TH><TD>0.2690964</TD><TD>0.8035033</TD><TD>0.5832181</TD></TR>
    <TR><TH>11</TH><TD>0.4497564</TD><TD>-0.6935559</TD><TD>1.896662</TD></TR>
    <TR><TH>12</TH><TD>0.02708176</TD><TD>-0.258272</TD><TD>-0.37012</TD></TR>
    <TR><TH>13</TH><TD>0.04565963</TD><TD>-0.3430478</TD><TD>-0.3924844</TD></TR>
    <TR><TH>14</TH><TD>-2.410929</TD><TD>1.939206</TD><TD>-0.5900438</TD></TR>
    <TR><TH>15</TH><TD>0.2270499</TD><TD>-0.1417654</TD><TD>0.8555065</TD></TR>
    <TR><TH>16</TH><TD>0.286761</TD><TD>0.5648119</TD><TD>-0.5097008</TD></TR>
    <TR><TH>17</TH><TD>1.403344</TD><TD>-1.378522</TD><TD>0.4340351</TD></TR>
    <TR><TH>18</TH><TD>0.03425181</TD><TD>0.8961165</TD><TD>-0.8705775</TD></TR>
    <TR><TH>19</TH><TD>1.369953</TD><TD>0.2725969</TD><TD>0.5792226</TD></TR>
    <TR><TH>20</TH><TD>-1.532103</TD><TD>0.957065</TD><TD>0.4276634</TD></TR>
    <TR><TH>21</TH><TD>-0.3666802</TD><TD>0.6486989</TD><TD>-0.004649441</TD></TR>
    <TR><TH>22</TH><TD>0.1715484</TD><TD>-0.07957611</TD><TD>0.4553892</TD></TR>
    <TR><TH>23</TH><TD>-2.140093</TD><TD>0.9332446</TD><TD>0.8186856</TD></TR>
    <TR><TH>24</TH><TD>-1.548256</TD><TD>0.370246</TD><TD>-0.773089</TD></TR>
    <TR><TH>25</TH><TD>-0.01298333</TD><TD>0.1873089</TD><TD>-2.131449</TD></TR>
    <TR><TH>26</TH><TD>-1.197682</TD><TD>-0.005001849</TD><TD>-0.1256726</TD></TR>
    <TR><TH>27</TH><TD>-1.892007</TD><TD>3.40565</TD><TD>-0.1035762</TD></TR>
    <TR><TH>28</TH><TD>0.4154477</TD><TD>0.7272545</TD><TD>0.9788553</TD></TR>
    <TR><TH>29</TH><TD>1.158081</TD><TD>0.2952752</TD><TD>0.2839339</TD></TR>
    <TR><TH>30</TH><TD>1.294258</TD><TD>0.2007735</TD><TD>0.342265</TD></TR>
    <TR><TH>31</TH><TD>0.1640854</TD><TD>-0.6083832</TD><TD>0.1443463</TD></TR>
    <TR><TH>32</TH><TD>0.5377329</TD><TD>0.6965567</TD><TD>1.187906</TD></TR>
    <TR><TH>33</TH><TD>2.180975</TD><TD>-0.1948093</TD><TD>0.6283156</TD></TR>
    <TR><TH>34</TH><TD>0.2308662</TD><TD>-0.6480712</TD><TD>-0.02802031</TD></TR>
    <TR><TH>35</TH><TD>0.8710046</TD><TD>1.244731</TD><TD>-0.1063582</TD></TR>
    <TR><TH>36</TH><TD>-0.2344887</TD><TD>-2.010204</TD><TD>0.1217012</TD></TR>
    <TR><TH>37</TH><TD>-1.331632</TD><TD>-0.8254575</TD><TD>-1.216578</TD></TR>
    <TR><TH>38</TH><TD>-1.025789</TD><TD>-1.224865</TD><TD>-0.7350567</TD></TR>
    <TR><TH>39</TH><TD>0.2674311</TD><TD>-0.3139666</TD><TD>0.3284034</TD></TR>
    <TR><TH>40</TH><TD>-1.185418</TD><TD>0.2725766</TD><TD>-0.5379969</TD></TR>
    <TR><TH>41</TH><TD>-0.1546276</TD><TD>0.03489387</TD><TD>0.3572081</TD></TR>
    <TR><TH>42</TH><TD>0.8738098</TD><TD>-1.489697</TD><TD>-1.603233</TD></TR>
    <TR><TH>43</TH><TD>0.2768838</TD><TD>-0.2052791</TD><TD>0.3135911</TD></TR>
    <TR><TH>44</TH><TD>1.520626</TD><TD>2.127892</TD><TD>0.1574096</TD></TR>
    <TR><TH>45</TH><TD>0.05643199</TD><TD>1.05201</TD><TD>-1.069286</TD></TR>
    <TR><TH>46</TH><TD>0.03896958</TD><TD>0.1088619</TD><TD>1.560223</TD></TR>
    <TR><TH>47</TH><TD>0.8978581</TD><TD>0.07131786</TD><TD>0.3290581</TD></TR>
    <TR><TH>48</TH><TD>0.7683447</TD><TD>-0.2017215</TD><TD>0.1483074</TD></TR>
    <TR><TH>49</TH><TD>0.4988259</TD><TD>-0.5406089</TD><TD>0.202215</TD></TR>
    <TR><TH>50</TH><TD>1.52964</TD><TD>-1.192179</TD><TD>0.5249542</TD></TR>
    <TR><TH>51</TH><TD>-0.1271758</TD><TD>1.001217</TD><TD>0.2995675</TD></TR>
    <TR><TH>52</TH><TD>-0.07324792</TD><TD>-0.5928008</TD><TD>0.509773</TD></TR>
    <TR><TH>53</TH><TD>1.568079</TD><TD>0.3693428</TD><TD>0.6873462</TD></TR>
    <TR><TH>54</TH><TD>0.2602205</TD><TD>1.560101</TD><TD>0.6838802</TD></TR>
    <TR><TH>55</TH><TD>-0.2604079</TD><TD>0.1696515</TD><TD>-1.016573</TD></TR>
    <TR><TH>56</TH><TD>0.8102853</TD><TD>-0.9345477</TD><TD>0.4402335</TD></TR>
    <TR><TH>57</TH><TD>0.1026545</TD><TD>0.1625502</TD><TD>0.9776058</TD></TR>
    <TR><TH>58</TH><TD>-0.6851276</TD><TD>-0.04119683</TD><TD>-0.1615313</TD></TR>
    <TR><TH>59</TH><TD>0.009488993</TD><TD>-0.6992373</TD><TD>0.8356431</TD></TR>
    <TR><TH>60</TH><TD>0.9612086</TD><TD>-0.3953424</TD><TD>0.2505092</TD></TR>
    <TR><TH>61</TH><TD>-1.712787</TD><TD>-0.3033722</TD><TD>1.713433</TD></TR>
    <TR><TH>62</TH><TD>0.2879968</TD><TD>-0.3462038</TD><TD>-1.243077</TD></TR>
    <TR><TH>63</TH><TD>-0.6619336</TD><TD>-0.5396257</TD><TD>0.7891796</TD></TR>
    <TR><TH>64</TH><TD>0.525199</TD><TD>0.2655049</TD><TD>-0.6153533</TD></TR>
    <TR><TH>65</TH><TD>0.6677281</TD><TD>-0.3206562</TD><TD>-0.00603524</TD></TR>
    <TR><TH>66</TH><TD>-1.440427</TD><TD>0.07065125</TD><TD>0.4005165</TD></TR>
    <TR><TH>67</TH><TD>-0.5370034</TD><TD>-2.130432</TD><TD>0.1862285</TD></TR>
    <TR><TH>68</TH><TD>-1.326288</TD><TD>0.2426011</TD><TD>-0.8973327</TD></TR>
    <TR><TH>69</TH><TD>-0.9573643</TD><TD>1.588237</TD><TD>-0.2380769</TD></TR>
    <TR><TH>70</TH><TD>-0.6543979</TD><TD>1.498919</TD><TD>-0.7131357</TD></TR>
    <TR><TH>71</TH><TD>-1.335157</TD><TD>0.5676285</TD><TD>0.640198</TD></TR>
    <TR><TH>72</TH><TD>-0.259729</TD><TD>0.1922855</TD><TD>-1.402221</TD></TR>
    <TR><TH>73</TH><TD>0.5600177</TD><TD>-1.356244</TD><TD>1.034522</TD></TR>
    <TR><TH>74</TH><TD>-0.3787931</TD><TD>-0.1257271</TD><TD>-0.5878356</TD></TR>
    <TR><TH>75</TH><TD>1.078941</TD><TD>-1.669386</TD><TD>1.708344</TD></TR>
    <TR><TH>76</TH><TD>-0.8459409</TD><TD>-0.1786205</TD><TD>-0.1958844</TD></TR>
    <TR><TH>77</TH><TD>1.811325</TD><TD>0.4000363</TD><TD>1.108118</TD></TR>
    <TR><TH>78</TH><TD>-0.4552358</TD><TD>-0.7934174</TD><TD>2.283829</TD></TR>
    <TR><TH>79</TH><TD>0.351885</TD><TD>-0.06082214</TD><TD>1.182574</TD></TR>
    <TR><TH>80</TH><TD>2.057236</TD><TD>2.083603</TD><TD>-1.109457</TD></TR>
    <TR><TH>81</TH><TD>0.6461174</TD><TD>0.3140881</TD><TD>-1.259195</TD></TR>
    <TR><TH>82</TH><TD>2.51347</TD><TD>1.106768</TD><TD>-1.237082</TD></TR>
    <TR><TH>83</TH><TD>-0.4050629</TD><TD>1.244775</TD><TD>0.2588656</TD></TR>
    <TR><TH>84</TH><TD>-0.1137998</TD><TD>0.3814998</TD><TD>0.1557911</TD></TR>
    <TR><TH>85</TH><TD>0.4024124</TD><TD>1.332716</TD><TD>-0.8056192</TD></TR>
    <TR><TH>86</TH><TD>0.3854209</TD><TD>-1.61086</TD><TD>-0.6874292</TD></TR>
    <TR><TH>87</TH><TD>-0.02107395</TD><TD>-1.405266</TD><TD>-0.6029087</TD></TR>
    <TR><TH>88</TH><TD>-0.07453712</TD><TD>-0.287633</TD><TD>-0.4026233</TD></TR>
    <TR><TH>89</TH><TD>-0.4894317</TD><TD>-0.5803388</TD><TD>1.196489</TD></TR>
    <TR><TH>90</TH><TD>1.004556</TD><TD>0.5372572</TD><TD>-0.08770909</TD></TR>
    <TR><TH>91</TH><TD>1.423935</TD><TD>0.6820146</TD><TD>2.884055</TD></TR>
    <TR><TH>92</TH><TD>0.2796988</TD><TD>-1.178997</TD><TD>-0.143892</TD></TR>
    <TR><TH>93</TH><TD>0.6813079</TD><TD>0.01437919</TD><TD>0.5099701</TD></TR>
    <TR><TH>94</TH><TD>-1.060234</TD><TD>0.04483657</TD><TD>0.2499197</TD></TR>
    <TR><TH>95</TH><TD>1.24773</TD><TD>-0.3856004</TD><TD>-0.2880728</TD></TR>
    <TR><TH>96</TH><TD>-0.5890517</TD><TD>0.4995753</TD><TD>1.132313</TD></TR>
    <TR><TH>97</TH><TD>-0.8437811</TD><TD>1.43619</TD><TD>-0.1876503</TD></TR>
    <TR><TH>98</TH><TD>0.940522</TD><TD>0.7151117</TD><TD>-1.439318</TD></TR>
    <TR><TH>99</TH><TD>-0.1429401</TD><TD>-0.1765888</TD><TD>0.9054335</TD></TR>
    </TABLE>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 77-79

Compute the temporal Mean
It corresponds to the mean of the values of the time series

.. GENERATED FROM PYTHON SOURCE LINES 79-81

.. code-block:: default

    myTimeSeries.getInputMean()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[0.0424435,0.0709075,0.0473796]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 82-83

Draw the marginal i of the time series using linear interpolation

.. GENERATED FROM PYTHON SOURCE LINES 83-86

.. code-block:: default

    graph = myTimeSeries.drawMarginal(0)
    view = viewer.View(graph)




.. image:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_001.png
    :alt: Unnamed - 0 marginal
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 87-88

with no interpolation

.. GENERATED FROM PYTHON SOURCE LINES 88-91

.. code-block:: default

    graph = myTimeSeries.drawMarginal(0, False)
    view = viewer.View(graph)
    plt.show()



.. image:: /auto_probabilistic_modeling/stochastic_processes/images/sphx_glr_plot_timeseries_manipulation_002.png
    :alt: Unnamed - 0 marginal
    :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.130 seconds)


.. _sphx_glr_download_auto_probabilistic_modeling_stochastic_processes_plot_timeseries_manipulation.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_timeseries_manipulation.py <plot_timeseries_manipulation.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_timeseries_manipulation.ipynb <plot_timeseries_manipulation.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
